ie resolve comments out of the box

--- a/django_fixmystreet/fixmystreet/static/css/layout.css
+++ b/django_fixmystreet/fixmystreet/static/css/layout.css
@@ -1244,7 +1244,6 @@ p.comment-incident{
 }
 
 .report_update {
-    padding-top: .5em;
     border: 1px solid gray;
     border-radius: 8px;
     margin: 10px 0;
